--- a/xyz_grid-0001-2934480424-img.html
+++ b/xyz_grid-0001-2934480424-img.html
@@ -1,5 +1,5 @@
-.img {
+<style>img {
   max-width: 100%;
   height: auto;
-}
+}</style>
 <html><body><img src='https://huggingface.co/Kefasu/sd-vae-collection/resolve/main/xyz_grid-0001-2934480424.png' alt='Image'></body></html>
